# diploma_web_app

./: .env.mysql.example  .env.template  .gitignore  README.md  docker-compose.yml  init.sh  package-lock.json  package.json  pyproject.toml  requirements.txt
SQL/: database_creation.sql  fill_mock_db.sql  user_management.sql
companies/: models.py
docker/django/: Dockerfile
docker/mysql/: Dockerfile
jobs/: models.py  views.py
jobs/migrations/: 0001_initial.py  0003_job_skills_delete_jobskills.py  0004_job_address_job_company_job_is_archived_and_more.py  0007_alter_job_pub_date.py  0008_alter_job_pub_date.py
jobs/templates/jobs/: details.html  index.html  search.html
public/: index.html
skills/: models.py
skills/migrations/: 0001_initial.py
src/: App.js
src/components/btnDarkMode/: BtnDarkMode.jsx
src/components/footer/: Footer.jsx
src/components/formValidation/: FormValidation.jsx  (+1 more)
src/pages/: Home.jsx
src/styles/: main.css
src/utils/: detectDarkMode.js
tests/: test_hh_parser.py  test_hh_scraper.py  test_http_request_handler.py
tests/mock_pages/: empty.html  hh_job_page.html  hh_search_list_page.html
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0004_profile_delete_user.py
web_app/: config.py  settings.py  urls.py
web_app/companies/: admin.py  models.py  urls.py
web_app/jobs/: forms.py  models.py  urls.py  views.py
web_app/skills/: apps.py  models.py  urls.py  views.py
web_app/users/: models.py  views.py
web_app/web_app/: settings.py
web_scraping/scrapers/: parser_habr.py
(+47 files in other folders)
